# chops

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: android.yml  claude.yml  desktop.yml  security.yml  test.yml
app/: package-lock.json  package.json
app/src/: index.html  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  updater.json
app/src-tauri/icons/: icon.icns
app/src-tauri/icons/android/values/: ic_launcher_background.xml
app/src-tauri/src/: lib.rs  log.rs  main.rs  mqtt.rs  stt.rs  tunnel.rs
app/src-tauri/src/tunnel/: android.rs  authorize.rs  desktop.rs  mod.rs  secure_key.rs
app/src/js/: app.js  commands.js  debug.js  messages.js  mqtt.js  terminal.js  voice.js
app/src/js/session/: SessionAction.js  sessions.js
crates/agent-core/: Cargo.toml
crates/agent-core/src/: intent.rs  main.rs
crates/chops-common/: Cargo.toml
crates/chops-common/src/: lib.rs
crates/chops-dev-client/: Cargo.toml
crates/chops-dev-client/src/: lib.rs  tests.rs
crates/plugin-runner/: Cargo.toml
crates/plugin-runner/src/: main.rs
crates/stt-publisher/: Cargo.toml
crates/stt-publisher/src/: main.rs
crates/web-ui/: Cargo.toml
crates/web-ui/src/: main.rs
docs/: android-setup.md  atomicguard-integration.md  commands.md  dev-architecture.md  dev-session-manager-phase1.md  dev-session-manager-phase2.md  dev-session-manager.md  dev.md  on-device-intent-classification.md  overview.md  tauri-app.md
scripts/: chops-notify.sh  chops-send.sh  install-linux.sh  install-mac.sh  termux-setup.md  ttyd-attach.sh
tests/: integration.rs
web/: index.html  manifest.json  sw.js
