[package]
name = "chops-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "chops_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
whisper-rs = "0.14"
cpal = "0.15"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
ringbuf = "0.4"
anyhow = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
