[package]
name = "chops-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "chops_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
whisper-rs = "0.14"
rumqttc = "0.25"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
anyhow = "1"
url = "2"
chops-dev-client = { path = "../../crates/chops-dev-client" }
aes-gcm = "0.10"
ssh-key = { version = "0.6", features = ["ed25519"] }
rand = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "android")'.dependencies]
# russh would go here when the Handler-based tunnel is implemented
# For now Android uses bundled SSH binary via std::process::Command

[build-dependencies]
tauri-build = { version = "2", features = [] }
