[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chops-common = { path = "../chops-common" }
dev-lib = { path = "../dev-lib" }
tokio = { version = "1", features = ["full"] }
rumqttc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
regex = "1"
strsim = "0.11"
dirs = "6"
