[package]
name = "plugin-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
chops-common = { path = "../chops-common" }
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
