[package]
name = "web-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
chrono = "0.4"
dev-lib = { path = "../dev-lib" }
anyhow = "1"
