[package]
name = "web-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
chops-dev-client = { path = "../chops-dev-client" }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
